--- a/style.css
+++ b/style.css
@@ -4,13 +4,17 @@
 	color: white;
 	margin: 0;
 	font-size: 17px;
+	background-color: #10C19E;
 }
 
 #wrapper {
-	background-color: #10C19E;
 	height: 100%;
 	padding-top: 70px;
 	position: relative;
+}
+
+#container {
+	margin-bottom: 40px;
 }
 
 #headerDiv {
@@ -66,6 +70,7 @@ form:after {
 .input {
 	background-color: white;
 	width: 90%;
+	display: inline-block;
 	margin: 0 auto 15px;
 	position: relative;
 }
@@ -77,7 +82,8 @@ form:after {
     top:0;
     bottom:0;
     right: 0;
-	padding: 5%;
+	padding: 13px;
+	background-color: white;
 }
 
 input {
@@ -85,6 +91,7 @@ input {
 	border: none;
 	border-radius: 3px;
 	height: 40px;
+	background-color: white;
 }
 
 input[type=text], [type=password] {
@@ -107,6 +114,7 @@ input[type=text], [type=password] {
 #lostPassword {
 	color: #BCC1C0;
 	text-decoration: underline;
+	background-color: #F5F5F5;
 }
 
 ::-webkit-input-placeholder { /* Chrome */
